Fixing bidirectional relationship between Trainee and Trainer. Console application made.