@@ -6,26 +6,41 @@ import com.epamlearning.models.Training;
 import com.epamlearning.models.TrainingType;
 import jakarta.persistence.criteria.CriteriaBuilder;
 import jakarta.persistence.criteria.CriteriaQuery;
+import jakarta.persistence.criteria.Predicate;
 import jakarta.persistence.criteria.Root;
 import lombok.extern.slf4j.Slf4j;
 import org.hibernate.HibernateException;
 import org.hibernate.Session;
 import org.hibernate.SessionFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
+import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-
-// Todo: move all queries to file and use @Value annotation to import them.
 @Component
 @Slf4j
 public class TrainingDAOImpl implements EntityDAO<Training> {
 
-    private SessionFactory sessionFactory;
+    private final SessionFactory sessionFactory;
+
+    @Value("${FIND_ALL_TRAININGS_QUERY}")
+    private String FIND_ALL_TRAININGS_QUERY;
+    @Value("${FIND_TRAININGS_BY_TRAINEE_QUERY}")
+    private String FIND_TRAINING_BY_TRAINEE_QUERY;
+    @Value("${DELETE_TRAININGS_BY_TRAINEE_QUERY}")
+    private String DELETE_TRAINING_BY_TRAINEE_QUERY;
+    @Value("${FIND_TRAININGS_BY_TRAINER_QUERY}")
+    private String FIND_TRAININGS_BY_TRAINER_QUERY;
+    @Value("${FIND_TRAINERS_BY_TRAINEE_QUERY}")
+    private String FIND_TRAINERS_BY_TRAINEE_QUERY;
+    @Value("${FIND_ANOTHER_TRAINING_BY_TRAINER_AND_TRAINEE_QUERY}")
+    private String FIND_ANOTHER_TRAINING_BY_TRAINER_AND_TRAINEE_QUERY;
+    @Value("${FIND_TRAININGS_BY_TRAINER_AND_TRAINEE_QUERY}")
+    private String FIND_TRAININGS_BY_TRAINER_AND_TRAINEE_QUERY;
 
     @Autowired
     public TrainingDAOImpl(SessionFactory sessionFactory) {
@@ -33,34 +48,13 @@ public class TrainingDAOImpl implements EntityDAO<Training> {
     }
 
     @Override
-    public Optional<Training> save(Training training) {
+    public Optional<Training> saveOrUpdate(Training training) {
         try (Session session = sessionFactory.openSession()) {
             session.beginTransaction();
-            session.merge(training); // session.save() is deprecated
+            session.merge(training);
             session.getTransaction().commit();
-            log.info("DAO: Training created: {}", training);
+            log.info("DAO: Training inserted/updated: {}", training);
             return Optional.ofNullable(training);
-        }
-    }
-
-    @Override
-    public Optional<Training> update(Long id, Training training) {
-        try (Session session = sessionFactory.openSession()) {
-            session.beginTransaction();
-            Training trainingToUpdate = session.find(Training.class, id);
-            trainingToUpdate.setTrainer(training.getTrainer());
-            trainingToUpdate.setTrainee(training.getTrainee());
-            trainingToUpdate.setTrainingType(training.getTrainingType());
-            trainingToUpdate.setTrainingDate(training.getTrainingDate());
-            trainingToUpdate.setTrainingDuration(training.getTrainingDuration());
-            trainingToUpdate.setTrainingName(training.getTrainingName());
-//            session.merge(traineeToUpdate);
-            session.getTransaction().commit();
-            log.info("DAO: Training updated. Id: {}, training: {}", id, trainingToUpdate);
-            return Optional.ofNullable(trainingToUpdate);
-        } catch (HibernateException e) {
-            log.warn("Error updating Training with ID: {}. Error: {}", id, e.getMessage());
-            throw new RuntimeException("Error updating Training with ID " + id, e);
         }
     }
 
@@ -79,7 +73,11 @@ public class TrainingDAOImpl implements EntityDAO<Training> {
     @Override
     public List<Optional<Training>> findAll() {
         try (Session session = sessionFactory.openSession()) {
-            List<Optional<Training>> trainings = session.createQuery("from Training ").getResultList();
+            List<Optional<Training>> trainings = session.createQuery(FIND_ALL_TRAININGS_QUERY, Training.class)
+                    .getResultList()
+                    .stream()
+                    .map(Optional::ofNullable)
+                    .toList();
             log.info("DAO: Trainings found. Trainings: {}", trainings);
             return trainings;
         } catch (HibernateException e) {
@@ -89,17 +87,15 @@ public class TrainingDAOImpl implements EntityDAO<Training> {
     }
 
     @Override
-    public void deleteById(Long id) {
+    public void delete(Training training) {
         try (Session session = sessionFactory.openSession()) {
             session.beginTransaction();
-
-            Training trainingToDelete = session.find(Training.class, id);
-            session.remove(trainingToDelete);
+            session.remove(training);
             session.getTransaction().commit();
-            log.info("DAO: Training deleted. Id: {}, training: {}", id, trainingToDelete);
+            log.info("DAO: Training deleted. Training: {}", training);
         } catch (HibernateException e) {
-            log.warn("DAO: Error delete Training with ID: {}. Error: {}", id, e.getMessage());
-            throw new RuntimeException("Error delete Training with ID " + id, e);
+            log.warn("DAO: Error delete Training: {}. Error: {}", training, e.getMessage());
+            throw new RuntimeException("Error delete Training: " + training, e);
         }
     }
 
@@ -108,34 +104,53 @@ public class TrainingDAOImpl implements EntityDAO<Training> {
         return Optional.empty();
     }
 
-    public void deleteTrainingByTrainee(Long traineeId){
+    public void deleteTrainingByTrainee(Trainee trainee) {
         try (Session session = sessionFactory.openSession()) {
             session.beginTransaction();
-            session.createQuery("DELETE FROM Training t WHERE t.trainee.id=:traineeId")
-                    .setParameter("traineeId", traineeId)
+            session.createQuery(DELETE_TRAINING_BY_TRAINEE_QUERY)
+                    .setParameter(1, trainee)
                     .executeUpdate();
-
             session.getTransaction().commit();
-            log.info("DAO: Trainings deleted by trainee id: {}", traineeId);
+            log.info("DAO: Trainings deleted by trainee: {}", trainee);
         } catch (HibernateException e) {
-            log.warn("DAO: Error to delete Trainings by trainee id: {}. Error: {}", traineeId, e.getMessage());
-            throw new RuntimeException("Error to delete Trainings by trainee id: " + traineeId + ". ", e);
+            log.warn("DAO: Error to delete Trainings by trainee: {}. Error: {}", trainee, e.getMessage());
+            throw new RuntimeException("Error to delete Trainings by trainee: " + trainee + ". ", e);
         }
     }
 
-
-    public List<Optional<Training>> findByTrainee(Long traineeId) {
+    public List<Optional<Training>> findByTrainee(Trainee trainee) {
         try (Session session = sessionFactory.openSession()) {
-            List<Optional<Training>> trainings = session.createQuery("SELECT t FROM Training t WHERE t.trainee.id=:traineeId", Training.class)
-                    .setParameter("traineeId", traineeId)
-                    .getResultList().stream().map(Optional::ofNullable).collect(Collectors.toList());
+            List<Optional<Training>> trainings = session.createQuery(FIND_TRAINING_BY_TRAINEE_QUERY, Training.class)
+                    .setParameter(1, trainee)
+                    .getResultList()
+                    .stream()
+                    .map(Optional::ofNullable)
+                    .toList();
 
-            log.info("DAO: Trainings found by trainee id: {}. Trainings: {}", traineeId, trainings);
+            log.info("DAO: Trainings found by trainee: {}. Trainings: {}", trainee, trainings);
             return trainings;
 
         } catch (HibernateException e) {
-            log.warn("DAO: Error to find Training by trainee id: {}. Error: {}", traineeId, e.getMessage());
-            throw new RuntimeException("Error to find Training by trainee id: " + traineeId + ". ", e);
+            log.warn("DAO: Error to find Training by trainee: {}. Error: {}", trainee, e.getMessage());
+            throw new RuntimeException("Error to find Training by trainee: " + trainee + ". ", e);
+        }
+    }
+
+    public List<Optional<Training>> findByTrainer(Trainer trainer) {
+        try (Session session = sessionFactory.openSession()) {
+            List<Optional<Training>> trainings = session.createQuery(FIND_TRAININGS_BY_TRAINER_QUERY, Training.class)
+                    .setParameter(1, trainer)
+                    .getResultList()
+                    .stream()
+                    .map(Optional::ofNullable)
+                    .toList();
+
+            log.info("DAO: Trainings found by trainer: {}. Trainings: {}", trainer, trainings);
+            return trainings;
+
+        } catch (HibernateException e) {
+            log.warn("DAO: Error to find Training by trainer: {}. Error: {}", trainer, e.getMessage());
+            throw new RuntimeException("Error to find Training by trainer: " + trainer + ". ", e);
         }
     }
 
@@ -145,8 +160,34 @@ public class TrainingDAOImpl implements EntityDAO<Training> {
             CriteriaBuilder cb = sessionFactory.getCriteriaBuilder();
             CriteriaQuery<Training> cq = cb.createQuery(Training.class);
             Root<Training> t = cq.from(Training.class);
-            cq.select(t).where(cb.equal(t.get("trainee"), trainee), cb.between(t.get("trainingDate"), dateFrom, dateTo), cb.equal(t.get("trainingType"), trainingType));
-            List<Optional<Training>> trainings = session.createQuery(cq).getResultList().stream().map(Optional::ofNullable).collect(Collectors.toList());
+
+            List<Predicate> predicates = new ArrayList<>();
+
+            // Conditions for date range
+            if (dateFrom != null && dateTo == null) {
+                predicates.add(cb.greaterThanOrEqualTo(t.get("trainingDate"), dateFrom));
+            } else if (dateFrom == null && dateTo != null) {
+                predicates.add(cb.lessThanOrEqualTo(t.get("trainingDate"), dateTo));
+            } else if (dateFrom != null) {
+                predicates.add(cb.between(t.get("trainingDate"), dateFrom, dateTo));
+            }
+
+            // Condition for training type
+            if (trainingType != null) {
+                predicates.add(cb.equal(t.get("trainingType"), trainingType));
+            }
+
+            // Condition for trainee ID
+            predicates.add(cb.equal(t.get("trainee"), trainee));
+
+            // Combine all predicates using AND
+            cq.where(cb.and(predicates.toArray(new Predicate[0])));
+
+//            cq.select(t).where(cb.equal(t.get("trainee"), trainee), cb.between(t.get("trainingDate"), dateFrom, dateTo), cb.equal(t.get("trainingType"), trainingType));
+            List<Optional<Training>> trainings = session.createQuery(cq).getResultList()
+                    .stream()
+                    .map(Optional::ofNullable)
+                    .toList();
 
             log.info("DAO: Trainings found by trainee and criteria: trainee: {}, dateFrom: {}, dateTo: {}, trainingType: {}. Trainings: {}", trainee, dateFrom, dateTo, trainingType, trainings);
             return trainings;
@@ -164,7 +205,11 @@ public class TrainingDAOImpl implements EntityDAO<Training> {
             CriteriaQuery<Training> cq = cb.createQuery(Training.class);
             Root<Training> t = cq.from(Training.class);
             cq.select(t).where(cb.equal(t.get("trainer"), trainer), cb.between(t.get("trainingDate"), dateFrom, dateTo), cb.equal(t.get("trainingType"), trainingType));
-            List<Optional<Training>> trainings = session.createQuery(cq).getResultList().stream().map(Optional::ofNullable).collect(Collectors.toList());
+            List<Optional<Training>> trainings = session.createQuery(cq)
+                    .getResultList()
+                    .stream()
+                    .map(Optional::ofNullable)
+                    .toList();
 
             log.info("DAO: Trainings found by trainer and criteria: trainer: {}, dateFrom: {}, dateTo: {}, trainingType: {}. Trainings: {}", trainer, dateFrom, dateTo, trainingType, trainings);
             return trainings;
@@ -175,34 +220,55 @@ public class TrainingDAOImpl implements EntityDAO<Training> {
         }
     }
 
-    public List<Optional<Trainer>> findTrainersByTrainee(Long traineeId) {
+
+    public List<Optional<Trainer>> findTrainersByTraineeFromTrainings(Trainee trainee) {
         try (Session session = sessionFactory.openSession()) {
-
-            List<Optional<Trainer>> trainers = session.createQuery("SELECT t.trainer FROM Training t WHERE t.trainee.id=:traineeId", Trainer.class)
-                    .setParameter("traineeId", traineeId)
-                    .getResultList().stream().map(Optional::ofNullable).collect(Collectors.toList());
-
-            log.info("DAO: Trainers found by trainee id: {}. Trainers: {}", traineeId, trainers);
+            List<Optional<Trainer>> trainers = session.createQuery(FIND_TRAINERS_BY_TRAINEE_QUERY, Trainer.class).
+                    setParameter(1, trainee)
+                    .getResultList()
+                    .stream()
+                    .map(Optional::ofNullable)
+                    .toList();
+            log.info("DAO: Trainers found by trainee: {}. Trainers: {}", trainee, trainers);
             return trainers;
-
         } catch (HibernateException e) {
-            log.warn("DAO: Error to find Trainers by trainee Id: {}. Error: {}", traineeId, e.getMessage());
-            throw new RuntimeException("Error to find Trainers by trainee Id: " + traineeId + ". ", e);
+            log.warn("DAO: Error finding all trainee's trainers. Error: {}", e.getMessage());
+            throw new RuntimeException("Error finding all trainee's trainers", e);
         }
     }
 
-    public Training updateTrainingTrainer(Long trainingId, Trainer trainer) {
-       try(Session session = sessionFactory.openSession()) {
-           session.beginTransaction();
-           Training training = session.find(Training.class, trainingId);
-           training.setTrainer(trainer);
-           session.getTransaction().commit();
-           log.info("DAO: Training updated. Id: {}, training: {}", trainingId, training);
-           return training;
-       } catch (HibernateException e) {
-           log.warn("DAO: Error to update Training with ID: {}. Error: {}", trainingId, e.getMessage());
-           throw new RuntimeException("Error to update Training with ID " + trainingId, e);
-       }
+    public boolean existsTraineeAndTrainerInAnotherTraining(Training training, Trainee trainee, Trainer trainer) {
+        try (Session session = sessionFactory.openSession()) {
+            List<Optional<Training>> trainingsFiltered = session.createQuery(FIND_ANOTHER_TRAINING_BY_TRAINER_AND_TRAINEE_QUERY, Training.class)
+                    .setParameter(1, trainer)
+                    .setParameter(2, trainee)
+                    .setParameter(3, training)
+                    .getResultList()
+                    .stream()
+                    .map(Optional::ofNullable)
+                    .toList();
+
+            return !trainingsFiltered.isEmpty();
+        } catch (HibernateException e) {
+            log.warn("DAO: Error to find Training by trainer: {}. Error: {}", trainer, e.getMessage());
+            throw new RuntimeException("Error to find Training by trainer: " + trainer + ". ", e);
+        }
     }
 
+    public boolean existsTraineeAndTrainerInTraining(Trainee trainee, Trainer trainer) {
+        try (Session session = sessionFactory.openSession()) {
+            List<Optional<Training>> trainingsFiltered = session.createQuery(FIND_TRAININGS_BY_TRAINER_AND_TRAINEE_QUERY, Training.class)
+                    .setParameter(1, trainer)
+                    .setParameter(2, trainee)
+                    .getResultList()
+                    .stream()
+                    .map(Optional::ofNullable)
+                    .toList();
+
+            return !trainingsFiltered.isEmpty();
+        } catch (HibernateException e) {
+            log.warn("DAO: Error to find Training by trainer: {}. Error: {}", trainer, e.getMessage());
+            throw new RuntimeException("Error to find Training by trainer: " + trainer + ". ", e);
+        }
+    }
 }
